--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# core\n",
-    "\n",
-    "> Fill in a module description here"
+    "# core"
    ]
   },
   {
@@ -41,7 +39,8 @@
     "import pandas as pd\n",
     "import boto3\n",
     "from dotenv import load_dotenv\n",
-    "from botocore.config import Config"
+    "from botocore.config import Config\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -52,11 +51,25 @@
    "source": [
     "#| export\n",
     "class ApiClient:\n",
+    "    \"\"\"\n",
+    "    API Client for Archivematica\n",
+    "\n",
+    "    Args:\n",
+    "        env_path: Path to the environment variables file\n",
+    "    \"\"\"\n",
     "    def __init__(self, env_path: str = \".env\"):\n",
     "        load_dotenv(override=True, dotenv_path=env_path)\n",
-    "        # pass\n",
     "\n",
     "    def upload(self, prefix, id, output_dir):\n",
+    "        \"\"\"\n",
+    "        Upload an AIP to Archivematica\n",
+    "\n",
+    "        Args:\n",
+    "            prefix: The prefix of the repository\n",
+    "            id: The ID of the record\n",
+    "\n",
+    "            output_dir: The directory to save the AIP\n",
+    "        \"\"\"\n",
     "        url = f\"https://{prefix}.repo.nii.ac.jp/records/{id}/export/json\"\n",
     "\n",
     "        response = requests.get(url)\n",
@@ -67,13 +80,11 @@
     "\n",
     "        filenames = []\n",
     "\n",
-    "        # output_dir = f\"./data\"\n",
-    "\n",
     "        output_item_dir = f\"{output_dir}/{prefix}_{id}\"\n",
     "\n",
     "        for file in attribute_value_mlt_list:\n",
     "            url = file[\"url\"][\"url\"]\n",
-    "            label = file[\"version_id\"] + \".\" + file[\"url\"][\"label\"].split(\".\")[-1]\n",
+    "            label = file[\"version_id\"] + \".\" + file[\"filename\"].split(\".\")[-1]\n",
     "\n",
     "            opath = f\"{output_item_dir}/{label}\"\n",
     "\n",
@@ -153,23 +164,119 @@
     "        key_dir = os.getenv(\"OS_TRANSFER_PREFIX\")\n",
     "        bucket_name = os.getenv(\"OS_BUCKET_NAME\")\n",
     "\n",
-    "        res = s3.upload_file(\n",
-    "            opath,\n",
-    "            bucket_name,\n",
-    "            opath.replace(output_dir, key_dir)\n",
-    "        )\n",
+    "        objects = [\n",
+    "            opath\n",
+    "        ]\n",
+    "\n",
+    "        \n",
     "\n",
     "        for filename in filenames:\n",
-    "\n",
     "            opath = f\"{output_item_dir}/{filename}\"\n",
+    "            objects.append(opath)\n",
+    "\n",
+    "        for opath in tqdm(objects):\n",
     "\n",
     "            s3.upload_file(\n",
     "                opath,\n",
     "                bucket_name,\n",
     "                opath.replace(output_dir, key_dir)\n",
-    "            )\n",
-    "\n",
-    "\n"
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/nakamura196/jc-matica/blob/main/jc_matica/core.py#L16){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### ApiClient\n",
+       "\n",
+       ">      ApiClient (env_path:str='.env')\n",
+       "\n",
+       "*API Client for Archivematica\n",
+       "\n",
+       "Args:\n",
+       "    env_path: Path to the environment variables file*"
+      ],
+      "text/plain": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/nakamura196/jc-matica/blob/main/jc_matica/core.py#L16){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### ApiClient\n",
+       "\n",
+       ">      ApiClient (env_path:str='.env')\n",
+       "\n",
+       "*API Client for Archivematica\n",
+       "\n",
+       "Args:\n",
+       "    env_path: Path to the environment variables file*"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show_doc(ApiClient)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/nakamura196/jc-matica/blob/main/jc_matica/core.py#L26){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### ApiClient.upload\n",
+       "\n",
+       ">      ApiClient.upload (prefix, id, output_dir)\n",
+       "\n",
+       "*Upload an AIP to Archivematica\n",
+       "\n",
+       "Args:\n",
+       "    prefix: The prefix of the repository\n",
+       "    id: The ID of the record\n",
+       "\n",
+       "    output_dir: The directory to save the AIP*"
+      ],
+      "text/plain": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/nakamura196/jc-matica/blob/main/jc_matica/core.py#L26){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### ApiClient.upload\n",
+       "\n",
+       ">      ApiClient.upload (prefix, id, output_dir)\n",
+       "\n",
+       "*Upload an AIP to Archivematica\n",
+       "\n",
+       "Args:\n",
+       "    prefix: The prefix of the repository\n",
+       "    id: The ID of the record\n",
+       "\n",
+       "    output_dir: The directory to save the AIP*"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show_doc(ApiClient.upload)"
    ]
   },
   {
