--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
+    "WEKOで公開されているデータからAIPを作成するツール"
    ]
   },
   {
@@ -87,19 +87,6 @@
     "$ pip install git+https://github.com/nakamura196/jc-matica.git\n",
     "```\n",
     "\n",
-    "or from [conda][conda]\n",
-    "\n",
-    "```sh\n",
-    "$ conda install -c nakamura196 jc_matica\n",
-    "```\n",
-    "\n",
-    "or from [pypi][pypi]\n",
-    "\n",
-    "\n",
-    "```sh\n",
-    "$ pip install jc_matica\n",
-    "```\n",
-    "\n",
     "\n",
     "[repo]: https://github.com/nakamura196/jc-matica\n",
     "[docs]: https://nakamura196.github.io/jc-matica/\n",
@@ -118,12 +105,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Documentation can be found hosted on this GitHub [repository][repo]'s [pages][docs]. Additionally you can find package manager specific guidelines on [conda][conda] and [pypi][pypi] respectively.\n",
+    "Documentation can be found hosted on this GitHub [repository][repo]'s [pages][docs].\n",
     "\n",
     "[repo]: https://github.com/nakamura196/jc-matica\n",
-    "[docs]: https://nakamura196.github.io/jc-matica/\n",
-    "[pypi]: https://pypi.org/project/jc-matica/\n",
-    "[conda]: https://anaconda.org/nakamura196/jc-matica"
+    "[docs]: https://nakamura196.github.io/jc-matica/"
    ]
   },
   {
@@ -137,34 +122,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fill me in please! Don't forget code examples:"
+    "Prepare `.env` file:"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "1+1"
+    "```txt\n",
+    "# Archivematicaの設定\n",
+    "DASHBOARD_URL=http://localhost:62080\n",
+    "DASHBOARD_USERNAME=test\n",
+    "DASHBOARD_API_KEY=test\n",
+    "\n",
+    "STORAGE_SERVICE_URL=http://localhost:62081\n",
+    "STORAGE_SERVICE_USERNAME=test\n",
+    "STORAGE_SERVICE_PASSWORD=test\n",
+    "\n",
+    "LOCATION_UUID=624454a4-1555-4a0f-ba6b-969452966cd4\n",
+    "PROCESSING_CONFIG=mdx\n",
+    "\n",
+    "# オブジェクトストレージの設定\n",
+    "AWS_ACCESS_KEY_ID=\n",
+    "AWS_SECRET_ACCESS_KEY=\n",
+    "\n",
+    "OS_ENDPOINT=https://s3ds.mdx.jp\n",
+    "OS_BUCKET_NAME=\n",
+    "OS_AIP_PREFIX=aip_storage\n",
+    "OS_TRANSFER_PREFIX=transfer_source/jc\n",
+    "```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Pip install:\n",
+    "\n",
+    "```bash\n",
+    "pip install https://github.com/nakamura196/archivematica_tools.git\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create AIP with Archivematica:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "from jc_matica.core import ApiClient\n",
+    "from archivematica_tools.api import ArchivematicaAPIClient\n",
+    "from archivematica_tools.vis import VisClient\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "load_dotenv(override=True)\n",
+    "\n",
+    "# https://kanazawa-u.repo.nii.ac.jp/records/26572\n",
+    "prefix = \"kanazawa-u\"\n",
+    "id = \"26572\"\n",
+    "output_dir = f\"./data\"\n",
+    "transfer_type = \"standard\"\n",
+    "transfer_accession = \"\"\n",
+    "location_uuid = os.getenv(\"LOCATION_UUID\")\n",
+    "processing_config = os.getenv(\"PROCESSING_CONFIG\")\n",
+    "\n",
+    "## Upload Dataset to S3 compatible storage\n",
+    "client = ApiClient()\n",
+    "client.upload(prefix, id, output_dir)\n",
+    "\n",
+    "## Create AIP with Archivematica\n",
+    "path = f\"jc/{prefix}_{id}\"\n",
+    "name = f\"{prefix}_{id}\"\n",
+    "\n",
+    "sip_uuid = ArchivematicaAPIClient.main(transfer_type, transfer_accession, location_uuid, path, name, processing_config, env_path=env_path)\n",
+    "\n",
+    "## Visualize AIP\n",
+    "res = VisClient.main(sip_uuid)\n",
+    "res.get_original_files()\n",
+    "res.visualize_file_format_counts()\n",
+    "res.visualize_file_events_count()\n",
+    "res.parse_file_sec()\n",
+    "res.visualize_structMap()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
